BM-19720 Fix: improve bm-cli auth get configuration. Display KeyCloak properties